# depsight-third-party-plugin

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  initDevContainer.sh
.github/workflows/: build.yml  on_dispatch.yml  on_release.yml
src/deply/core/plugins/uv/: uv.py
src/deply/core/plugins/vsce/: vsce.py
src/myplugin/: myplugin.py
tests/: test_plugin.py
