[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myplugin"] # TODO: REPLACE WITH "src/npm"

[project]
name = "deply-third-party-plugin" # TODO: RENAME TO "deply-npm-plugin"
version = "0.1.0"
description = "A third-party plugin template for Deply"
requires-python = ">=3.10"
dependencies = [
    "deply",
]

[project.entry-points."deply.plugins"]
myplugin = "myplugin.myplugin:MyPlugin" # TODO: REPLACE WITH "npm.npm:NPMPlugin"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
