[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myplugin"] # TODO: REPLACE WITH "src/npm"

[project]
name = "depsight-third-party-plugin" # TODO: RENAME TO "depsight-npm-plugin"
version = "0.1.0"
description = "A third-party plugin template for depsight"
requires-python = ">=3.12"
dependencies = [
    "depsight",
]

[project.entry-points."depsight.plugins"]
myplugin = "myplugin.myplugin:MyPlugin" # TODO: REPLACE WITH "npm.npm:NPMPlugin"

[tool.uv]
find-links = ["wheels"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["depsight", "depsight.*", "depsight.core.*", "depsight.core.plugins.*"]
ignore_missing_imports = true
follow_imports = "skip"
